Add swagger documentation annotations
